--- a/package.json
+++ b/package.json
@@ -53,8 +53,10 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@types/uniqid": "^5.3.3",
-    "@types/uuid": "^9.0.6",
     "react-scripts": "^5.0.1"
+  },
+  "overrides": {
+    "nth-check": "2.1.1",
+    "postcss":  "8.4.31"
   }
 }
